fixed sign up, fixed Task Detail overlay, fixed scrollbar in board

--- a/css/pages/board/boardLayout.css
+++ b/css/pages/board/boardLayout.css
@@ -290,6 +290,7 @@
 @media (max-width: 1200px) {
   .mainContainer {
     width: 100%;
+    overflow: scroll;
   }
   .mainContent {
     padding: 16px;
